fix: extend defensive metadata freezing to deeply nested collections
The previous implementation (36f71de) only performed shallow freezing of
top-level collections, leaving nested structures mutable. For example, a
Map containing a List value was frozen at the Map level, but the nested
List remained modifiable, violating immutability guarantees.

Changed freezeValue() to recursively freeze nested collections:
- For List: iterate items, recursively freeze each, then List.copyOf()
- For Set: iterate items, recursively freeze each, then Set.copyOf()
- For Map: iterate entries, recursively freeze each value, then wrap with
  Collections.unmodifiableMap()

This ensures deep immutability at all nesting levels without breaking the
record's API or existing tests.

Added comprehensive test case validating deeply nested Map→List mutation
prevention to ensure the fix works end-to-end.

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>